css/style.css
* {
	padding: 0;
	margin: 0;
}
body {
	margin: 0;
	padding: 0;
	background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('../images/background.jpg');
	background-position: center center;
	background-repeat: no-repeat;
	background-attachment: fixed;
	background-size: cover;
	background-color: #464646;
	font-family: Courier New, Courier, monospace
}
.blurr {
	position: fixed;
	top: 0;
	left: 0;
	z-index: 1;
	width: 100%;
	height: 100%;
	background-color: black;
	opacity: 0.6;
}
.top {
	position: fixed;
	top: 0;
	left: 0;
	z-index: 2;
	width: 100%;
	height: 100%;
}
.container {
	color: white;
	text-align: center;
	margin: 100px 10% 10px 10%;
}
.content-container {
	z-index: 994;
	padding: 0px;
	margin: 100px 0 10px 0;
	text-align: justify;
}
.title {
	z-index: 993;
	padding: 10px;
	margin: 0;
	font-size: 3em;
}
.subtitle {
	z-index: 992;
	margin: 0;
	padding: 10px;
	font-size: 1.8em;
}
.social-links {
	display: block;
	margin: 10px 10% 10px 10%;
}
.social-links > .social-item {
	display: inline-block;
	text-decoration: none;
	position: relative;
	vertical-align: middle;
	color: white;
}
.social-item img {
	height: 35px;
    width: 35px;
}
.social-item + .social-item {
	margin-left: 20px;
}
footer {
	z-index: 991;
	position: fixed;
	bottom: 0px;
	width: 100%;
}
@media screen and (max-width: 640px), screen and (max-height: 580px) {
	.social-links {
		margin-top: 10%;
		text-align: center;
	}
	.social-item {
		font-size: 1em;
	}
	.content-container {
		text-align: center;
		vertical-align: middle;
	}
	.title {
		font-size: 2em;
	}
	.subtitle {
		font-size: 1em;
	}
}

